replace several System.out.println Statements with NVBWLogger Call